# aw-watcher-network-rs

./: .editorconfig  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  lint.yml  release.yml
examples/: config.toml
src/: main.rs
