[package]
name = "aw-watcher-network-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aw-client-rust = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
aw-models = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"
